Fix for sonar code-smell issues